# aoc

./: .gitignore  Cargo.toml
2015/: Cargo.toml
2016/day1/: part1.cpp  part2.cpp
2016/day19/: Makefile  part1.cpp  part2.cpp
2016/day2/: part1.cpp  part2.cpp
2016/day20/: part1.cpp  part2.cpp
2016/day3/: Makefile  part1.cpp  part2.cpp
2016/day4/: part1.cpp  part2.cpp
2016/day5/: part1.py  part2.py
2016/day6/: Makefile  part1.cpp  part2.cpp
2016/day7/: part1.cpp  part1.py  part2.py
2016/day8/: part1.cpp  part2.cpp
2016/day9/: input.txt  part1.cpp  part1.py
2017/day1/: part1.cpp  part2.cpp
2017/day2/: part1.cpp  part2.cpp
2017/day3/: input.txt  part1.py  part2.py
2017/day4/: part1.cpp  part2.cpp
2017/day5/: part1.cpp  part2.cpp
2017/day6/: part1.py  part2.py  test.txt
2017/day7/: part1.py  part2.py
2017/day8/: part1.py  part2.py
2017/day9/: input.txt  part1.cpp  part2.cpp
2018/day3/: part1.py  part2.py
2018/day4/: part1.py
2018/day5/: part1.py  part2.py
2018/day6/: Cargo.toml
2018/day6/src/: main.rs
2019/day1/: Cargo.toml
2019/day1/src/: main.rs
2019/day10/: Cargo.toml
2019/day10/src/: main.rs
2019/day11/: Cargo.toml
2019/day11/src/: intcode.rs  main.rs  map.rs  point.rs
2019/day12/: Cargo.toml
2019/day12/src/: main.rs
2019/day13/src/: intcode.rs  main.rs
2019/day14/src/: main.rs
2019/day15/: Cargo.toml
2019/day15/src/: intcode.rs  main.rs  point.rs
2019/day2/: Cargo.toml
2019/day2/src/: main.rs
2019/day3/: Cargo.toml
2019/day3/src/: main.rs
2019/day4/: Cargo.toml
2019/day4/src/: main.rs
2019/day5/: Cargo.toml
2019/day5/src/: main.rs
2019/day6/src/: main.rs
2019/day7/src/: main.rs
2019/day8/: Cargo.toml
2019/day8/src/: main.rs
2019/day9/: Cargo.toml
2019/day9/src/: main.rs
2020/: Cargo.toml
2020/python_solutions/: day10.py  day11.py  day12.py  day13.py  day14.py  day16.py  day18.py  day19.py  day4.py  day6.py  day7.py  day8.py  day9.py  gen_matches.txt  matches.txt
2020/src/: lib.rs
2021/: Cargo.toml
2022/: Cargo.toml
2022/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
examples/: day1.rs
