[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[[bin]]
name = "day1"
test = false
bench = false

[[bin]]
name = "day2"
test = false
bench = false

[[bin]]
name = "day3"
test = false
bench = false

[[bin]]
name = "day4"
test = false
bench = false

[[bin]]
name = "day5"
test = false
bench = false

[[bin]]
name = "day6"
test = false
bench = false

[[bin]]
name = "day7"
test = false
bench = false

[[bin]]
name = "day8"
test = false
bench = false

[[bin]]
name = "day9"
test = false
bench = false

[[bin]]
name = "day10"
test = false
bench = false

[[bin]]
name = "day15"
test = false
bench = false

[[bin]]
name = "day17"
test = false
bench = false

[[bin]]
name = "day17_4"
test = false
bench = false

[dependencies]
anyhow = "*"
maplit = "*"
structopt = "*"
thiserror = "*"
