[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2021"

[[bin]]
name = "day1"
test = false
bench = false

[[bin]]
name = "day2"
test = false
bench = false

[[bin]]
name = "day3"
test = false
bench = false

[[bin]]
name = "day4"
test = false
bench = false

[[bin]]
name = "day5"
test = false
bench = false

[[bin]]
name = "day8"
test = false
bench = false

[dependencies]
anyhow = "*"
itertools = "*"
lazy_static = "1.4.0"
log = "*"
maplit = "*"
peg = "*"
pretty_env_logger = "*"
structopt = "*"
thiserror = "*"
